# tone-coach

./: README.md  pyproject.toml
backend/: pyproject.toml
backend/app/: __about__.py  main.py
backend/app/models/: response.py
backend/app/routes/: analyze.py  phrases.py  tts.py
backend/app/services/: pitch.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/record/: page.tsx
frontend/src/components/: BootstrapClient.tsx  Navbar.tsx  TextToSpeech.tsx  ThemeChanger.tsx  ToneChart.tsx
frontend/src/lib/: fetch-phrases.ts  upload-audio.ts  vertical-bar-plugin.ts
frontend/src/types/: pitch.ts
frontend/tone-coach/: package.json
frontend/tone-coach/src/app/: page.tsx
frontend/tone-coach/src/app/record/: page.tsx
frontend/tone-coach/src/components/: Footer.tsx  ToneChart.tsx
src/tone_coach/: app.py  audio_processing.py
